# chronlang-parser

./: .gitignore  Cargo.toml  Makefile  README.md  build.ts  compile-grammar.ts  deno.json  deno.jsonc  grammar.pegjs  grammar.ts  mod.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
ast/: mod.ts  sound-change.ts  span.ts  statements.ts
src/: ast.rs  grammar.ts  lib.rs  mod.ts  parser.rs
src/ast/: mod.ts  span.ts  statements.ts
src/parser/: class_definition.rs  common.rs  import.rs  lang_definition.rs  milestone.rs  series_definition.rs  sound_change.rs  trait_definition.rs  word_definition.rs
tests/: class.test.ts  error.test.ts  example.lang  import.test.ts  language.test.ts  milestone.test.ts  module.test.ts  series.test.ts  sound-change.test.ts  trait.test.ts  word.test.ts
